@@ -5,9 +5,10 @@ import ca.corbett.imageviewer.ui.MainWindow;
 import ca.corbett.imageviewer.ui.actions.AboutAction;
 import ca.corbett.imageviewer.ui.actions.ExitAction;
 import ca.corbett.imageviewer.ui.actions.ImageOperationAction;
-import ca.corbett.imageviewer.ui.actions.ImageSetAddAction;
+import ca.corbett.imageviewer.ui.actions.ImageSetAddImageAction;
 import ca.corbett.imageviewer.ui.actions.ImageSetCreateAction;
 import ca.corbett.imageviewer.ui.actions.ImageSetDeleteAction;
+import ca.corbett.imageviewer.ui.actions.ImageSetRemoveImageAction;
 import ca.corbett.imageviewer.ui.actions.LogConsoleAction;
 import ca.corbett.imageviewer.ui.actions.ManageExtensionsAction;
 import ca.corbett.imageviewer.ui.actions.NextImageAction;
@@ -344,7 +345,7 @@ public final class MenuManager {
         }
 
         else {
-            menuList.add(new JMenuItem("TODO image set removal options go here"));
+            menuList.add(new JMenuItem(new ImageSetRemoveImageAction("Remove this image from image set")));
             menuList.add(new JMenuItem(new ImageSetDeleteAction("Delete this image set")));
         }
 
@@ -405,7 +406,7 @@ public final class MenuManager {
             }
         }
         else if (node != null && (node.getUserObject() instanceof ImageSet)) {
-            menu.add(new ImageSetAddAction((ImageSet)node.getUserObject()));
+            menu.add(new ImageSetAddImageAction((ImageSet)node.getUserObject()));
         }
     }
 }
